--- a/Mywork.htm
+++ b/Mywork.htm
@@ -43,10 +43,10 @@
 		<span><a href="/Movie.htm">影片喔喔</a></span>
 		<span><a href='/SVGPractice.htm'>我要回家啦!!!</a></span>
 		<span><a href='/formandvalidate.htm'>表單設計與驗證</a></span>
-		<span><a href='/Javascript30/Day1/index.htm'>Js Day1 Drum</a></span>
-		<span><a href='/Javascript30/Day2/index.htm'>Js Day2 Clock</a></span>
-		<span><a href='/Javascript30/Day3/index.htm'>Js Day3 Bro!</a></span>
-		<span><a href='/Javascript30/Day5/index.htm'>Js Day5 Gallery</a></span>
+		<span><a href='/Javascript30/Day1/'>Js Day1 Drum</a></span>
+		<span><a href='/Javascript30/Day2/'>Js Day2 Clock</a></span>
+		<span><a href='/Javascript30/Day3/'>Js Day3 Bro!</a></span>
+		<span><a href='/Javascript30/Day5/'>Js Day5 Gallery</a></span>
 	</div>
 	<hr/>
 	<div id="content"></div>
