--- a/Javascript30/Day3/index.htm
+++ b/Javascript30/Day3/index.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Scoped CSS Variables and JS</title>
+  <title>Bro!!</title>
 </head>
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
@@ -10,7 +10,7 @@
   <div class="controls">
     <label for="spacing">Spacing:</label> 
       <!-- attribute of the <label> should be equal to the id attribute of the related element to bind them together -->
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="80" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur:</label>
     <input id="blur" type="range" name="blur" min="0" max="25" value="25" data-sizing="px">
@@ -26,7 +26,7 @@
     :root{
       --base: #ffc600;
       --spacing: 10px;
-      --blur: 10px;
+      --blur: 25px;
     }
 
     img{
