--- a/Mywork.htm
+++ b/Mywork.htm
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		function gotcha(webname){
 			var req= new XMLHttpRequest();
-			req.open("get","http://www.jojojack.tk/"+webname);
+			req.open("get","http://jjj08254.github.io/"+webname);
 			req.onload=function(){
 				var content=document.getElementById('content');
 				content.innerHTML=this.responseText;
