--- a/Mywork.htm
+++ b/Mywork.htm
@@ -7,7 +7,7 @@
 	<script type="text/javascript">
 		function gotcha(webname){
 			var req= new XMLHttpRequest();
-			req.open("get","http://jjj08254.github.io/"+webname);
+			req.open("get","https://jjj08254.github.io/"+webname);
 			req.onload=function(){
 				var content=document.getElementById('content');
 				content.innerHTML=this.responseText;
@@ -36,9 +36,9 @@
 		<span onclick="gotcha('CSS_Flexbox.htm')">CSS Flexbox</span>
 		<span onclick="gotcha('CSS表格樣式.htm')">CSS表格樣式</span>
 		<span onclick="gotcha('CSS選擇器.htm')">CSS選擇器</span>
-		<span><a href="http://www.jojojack.tk/Ajax標籤選單.htm">Ajax 標籤選單</a></span>
+		<span><a href="https://jjj08254.github.io/Ajax標籤選單.htm">Ajax 標籤選單</a></span>
 		<span><a href="/FirstWork.htm">Firstwork</a></span>
-		<span><a href="http://www.jojojack.tk">Frontpage</a></span>
+		<span><a href="http://jjj08254.github.io">Frontpage</a></span>
 		<span><a href="/canvasdraw.htm">Canvas繪圖</a></span>
 		<span><a href="/Movie.htm">影片喔喔</a></span>
 		<span><a href='/SVGPractice.htm'>我要回家啦!!!</a></span>
