--- a/Homepage.htm
+++ b/Homepage.htm
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h3>My Picture我的相片</h3>
-	<img src="jiwawa.jpg"></img>
+	<img src="Jiwawa.jpg"></img>
 	<hr></hr>
 	<hr/>
 	<h3>My Favorite我的最愛</h3>
