--- a/Ajax標籤選單.htm
+++ b/Ajax標籤選單.htm
@@ -7,7 +7,7 @@
 	function getData(pageName){
 		// Ajax:XMLHttpRequest 物件專門用來和伺服器做連線
 		var req = new XMLHttpRequest();
-		req.open('get','https://jjj08254.github.io/'+pageName); //get 取得網路
+		req.open('get','https://jojojack.tk/'+pageName); //get 取得網路
 		req.onload=function(){ //load事件，偵測連線的狀態結束
 			//連線完成，做連線後的處理
 			var content=document.getElementById('content');
