--- a/Mywork.htm
+++ b/Mywork.htm
@@ -46,6 +46,7 @@
 		<span><a href='/Javascript30/Day2/'>Js Day2 Clock</a></span>
 		<span><a href='/Javascript30/Day3/'>Js Day3 Bro!</a></span>
 		<span><a href='/Javascript30/Day5/'>Js Day5 Gallery</a></span>
+		<span><a href="/Javascript30/Day6/">Js Day6 Search!</a></span>
 	</div>
 	<hr/>
 	<div id="content"></div>
