--- a/Javascript30/Day6/index.htm
+++ b/Javascript30/Day6/index.htm
@@ -23,8 +23,8 @@ var cities = []; // new array, whereas {} is empty object
 fetch(endpoint)  // fetch return a 'Promise'
   .then(blob => blob.json()) // We can't use JSON.parse since it's a raw data
       // return another "promise"
-  .then(data => cities.push(...data)) // We can use 'cities = data'
-      // push data into cities. ex. cities.push(1,2,3,4) => cities = [1,2,3,4]
+  .then(data => cities.push(...data)) // We can use 'cities = data' --> cities becomes 'array'
+      // push data(argument) into cities(array). ex. cities.push(1,2,3,4) => cities = [1,2,3,4]
       // sice dada is an array, we want to sperate it into individual arguments, => use ...data
 
   function findMatches(wordToMatch, cities){
@@ -47,15 +47,17 @@ fetch(endpoint)  // fetch return a 'Promise'
     var matchArray = findMatches(this.value, cities);
     var html = matchArray.map(place => {
       var regex = new RegExp(this.value,'gi');
-      var cityName = place.city.replace(regex, `<span class='h1'>${this.value}</span>`)
-      var stateName = place.city.replace(regex, `<span class='h1'>${this.value}</span>`)
+      var cityName = place.city.replace(regex, `<span class='hl'>${this.value}</span>`);
+        // use 'b' to replace 'a'
+      var stateName = place.state.replace(regex, `<span class='hl'>${this.value}</span>`);
       return `
         <li>
           <span class='name'>${cityName}, ${stateName}</span>
           <span class='population'>${numberwithCommas(place.population)}</span>
         </li>
       `;
-    }).join('');
+    }).join(''); // the map will return an array -> join(): return a string
+    // join(): string w/ comma, join(''): string w/ no comma between, join('-'): string w/ "-"
     suggestions.innerHTML = html;
   }
 
