--- a/Mywork.htm
+++ b/Mywork.htm
@@ -47,6 +47,7 @@
 		<span><a href='/Javascript30/Day3/'>Js Day3 Bro!</a></span>
 		<span><a href='/Javascript30/Day5/'>Js Day5 Gallery</a></span>
 		<span><a href="/Javascript30/Day6/">Js Day6 Search!</a></span>
+		<span><a href="/Javascript30/Day8/">Js Day8 Canvas</a></span>
 	</div>
 	<hr/>
 	<div id="content"></div>
