--- a/Javascript30/Day8/index.htm
+++ b/Javascript30/Day8/index.htm
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
+
+  <style type="text/css">
+  body{
+    display: flex; 
+    flex-direction: column;
+  }
+  canvas{
+    flex: 0;
+
+  }
+  span{
+    flex: 0;
+  }
+  </style>
+
+
 </head>
 <body style="margin: 0px; padding: 0px;">
-  <span style="margin-left: center;">
+  <span style="text-align:  center;">
     <label for="butt">butt</label><input type="radio" name="lineCap" value="butt"/>
     <label for="square">square</label><input type="radio" name="lineCap" value="square"/> 
     <label for="round">round</label><input type="radio" name="lineCap" value="round"/> 
@@ -15,8 +31,8 @@
 <script>
   var canvas = document.querySelector('#draw');
   var ctx = canvas.getContext('2d');
-  canvas.width = innerWidth-5;
-  canvas.height = innerHeight-28;
+  canvas.width = innerWidth - 8;
+  canvas.height = innerHeight -28;
   ctx.strokeStyle = '#BADASS'; // strokeStyle: color
   ctx.lineJoin = 'round'; 
   ctx.lineCap = 'round'; // start/end of the line
@@ -56,7 +72,7 @@
       hue = 0;    
     }
 
-    if(ctx.lineWidth >= 100 || ctx.lineWidth <= 1){
+    if(ctx.lineWidth >= 80 || ctx.lineWidth <= 1){
       direction = !direction;
     }
     if(direction){
