--- a/Mywork.htm
+++ b/Mywork.htm
@@ -48,6 +48,8 @@
 		<span><a href='/Javascript30/Day5/'>Js Day5 Gallery</a></span>
 		<span><a href="/Javascript30/Day6/">Js Day6 Search!</a></span>
 		<span><a href="/Javascript30/Day8/">Js Day8 Canvas</a></span>
+		<span><a href="/Javascript30/Day10/">Js Day10 Canvas</a></span>
+		<span><a href="/Javascript30/Day11/">Js Day11 Canvas</a></span>
 	</div>
 	<hr/>
 	<div id="content"></div>
