--- a/Mywork.htm
+++ b/Mywork.htm
@@ -42,14 +42,17 @@
 		<span><a href="/Movie.htm">影片喔喔</a></span>
 		<span><a href='/SVGPractice.htm'>我要回家啦!!!</a></span>
 		<span><a href='/formandvalidate.htm'>表單設計與驗證</a></span>
-		<span><a href='/Javascript30/Day1/'>Js Day1 Drum</a></span>
-		<span><a href='/Javascript30/Day2/'>Js Day2 Clock</a></span>
-		<span><a href='/Javascript30/Day3/'>Js Day3 Bro!</a></span>
-		<span><a href='/Javascript30/Day5/'>Js Day5 Gallery</a></span>
-		<span><a href="/Javascript30/Day6/">Js Day6 Search!</a></span>
-		<span><a href="/Javascript30/Day8/">Js Day8 Canvas</a></span>
-		<span><a href="/Javascript30/Day10/">Js Day10 Shift Selection</a></span>
-		<span><a href="/Javascript30/Day11/">Js Day11 HTML Video</a></span>
+		<span><a href='/Javascript30/Day1/'>JsDay1 Drum</a></span>
+		<span><a href='/Javascript30/Day2/'>JsDay2 Clock</a></span>
+		<span><a href='/Javascript30/Day3/'>JsDay3 Bro!</a></span>
+		<span><a href='/Javascript30/Day5/'>JsDay5 Gallery</a></span>
+		<span><a href="/Javascript30/Day6/">JsDay6 Search!</a></span>
+		<span><a href="/Javascript30/Day8/">JsDay8 Canvas</a></span>
+		<span><a href="/Javascript30/Day10/">JsDay10 Shift Selection</a></span>
+		<span><a href="/Javascript30/Day11/">JsDay11 HTML Video</a></span>
+		<span><a href="/Javascript30/Day12/">JsDay12 Surprise MF</a></span>
+		<span><a href="/Javascript30/Day13/">JsDay13 Slide in on scroll</a></span>
+
 	</div>
 	<hr/>
 	<div id="content"></div>
