--- a/Mywork.htm
+++ b/Mywork.htm
@@ -52,6 +52,7 @@
 		<span><a href="/Javascript30/Day11/">JsDay11 HTML Video</a></span>
 		<span><a href="/Javascript30/Day12/">JsDay12 Surprise MF</a></span>
 		<span><a href="/Javascript30/Day13/">JsDay13 Slide in on scroll</a></span>
+		<span><a href="/Javascript30/Day15/">JsDay15 Local Storage</a></span>
 
 	</div>
 	<hr/>
