--- a/Javascript30/Day15/index.htm
+++ b/Javascript30/Day15/index.htm
@@ -28,7 +28,10 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+    //check if there is anything in the local storage and put it in the 'items'  
+    //JSON.parse(): make a changed string back to origin
+      
 
   function addItem(e){
     e.preventDefault();
@@ -41,10 +44,43 @@
     };
     
     items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+      //JSON.stringify(): make everything (multi-levels) become a string
+      //JSON.parse(): make a changed string back to origin
     this.reset(); // this: form element, reset(): empty the form
   }
 
-  addItems.addEventListener('submit',addItem);
+    // set it to be a default of an empty object
+    // so then if forget to pass in sth, it won't break javascript
+  function populateList(plates = [], platesList){
+    platesList.innerHTML = plates.map((plate, i) => {
+                  // map will return an array
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join(''); // join: change array to string
+                 // join() is same as toSting(), they are only one level change
+                 // JSON.stringify will go deeper levels to change everything into string
+  }
+
+function toggleDone(e){
+  if(!e.target.matches('input')) return; //skip this unless it's an input
+  // element.matches: checks to see if the Element would be selected by the provided selectorString
+  const el = e.target;
+  const index = el.dataset.index;
+  items[index].done = !items[index].done;
+  localStorage.setItem('items', JSON.stringify(items));
+  populateList(items,itemsList)
+}
+
+addItems.addEventListener('submit', addItem);
+itemsList.addEventListener('click', toggleDone);
+
+populateList(items, itemsList);
 </script>
 
 
