--- a/Mywork.htm
+++ b/Mywork.htm
@@ -53,6 +53,7 @@
 		<span><a href="/Javascript30/Day12/">JsDay12 Surprise MF</a></span>
 		<span><a href="/Javascript30/Day13/">JsDay13 Slide in on scroll</a></span>
 		<span><a href="/Javascript30/Day15/">JsDay15 Local Storage</a></span>
+		<span><a href="/Javascript30/Day16/">JsDay16 Mouse Shadow</a></span>
 
 	</div>
 	<hr/>
