changes my files

--- a/Javascript30/Day16/index.htm
+++ b/Javascript30/Day16/index.htm
@@ -18,6 +18,7 @@
 
   body {
     margin: 0;
+    cursor: no-drop;
   }
 
   .hero {
@@ -31,6 +32,11 @@
   h1 {
     text-shadow: 10px 10px 0 rgba(0,0,0,1);
     font-size: 100px;
+    cursor: text;
+  }
+  
+  h1:focus{
+    background-color: rgba(125,0,125,0.2);
   }
   </style>
 
@@ -57,7 +63,7 @@
     const yWalk = Math.round( y / height * walk) - (walk / 2);
     
     text.style.textShadow = `
-      ${xWalk}px ${yWalk}px 4px rgba(255,0,0,0.7),
+      ${xWalk}px ${yWalk * -1}px 4px rgba(255,0,0,0.7),
       ${xWalk * -1}px ${yWalk}px 3px rgba(0,255,0,0.7),
       ${yWalk}px ${xWalk * -1}px 6px rgba(0,0,255,0.7),
       ${yWalk * -1}px ${xWalk}px 8px rgba(255,255,0,0.7)
