--- a/Javascript30/Day17/index.htm
+++ b/Javascript30/Day17/index.htm
@@ -49,6 +49,24 @@
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
 
+function strip(bandName){
+  return bandName.replace(/^(a |the |an )/i, '').trim()
+    // use regexp to look for 'a ', 'the ', 'an ' (with space)
+    // and then replace with nothing
+      // trim() removes 空白 from both ends of a string. 
+}
+
+const sortedBands = bands.sort((a, b) => {
+  return strip(a) > strip(b) ? 1 : -1;
+});
+
+document.querySelector('#bands').innerHTML = 
+  sortedBands
+    .map(band => `<li>${band}</li>`)
+    .join('')
+
+console.log(sortedBands)
+
 </script>
 
 </body>
