--- a/Javascript30/Day19/index.html
+++ b/Javascript30/Day19/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="device-width=width initial-scale=1 maximum-scale=1" />
   <title>Get User Media Code Along!</title>
   <link rel="stylesheet" href="style.css">
 </head>
