--- a/Javascript30/Day20/index.htm
+++ b/Javascript30/Day20/index.htm
@@ -12,6 +12,36 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+  const recognition = new SpeechRecognition();
+  recognition.interimResults = true; 
+    // the result will populate while speaking, otherwise, the result only shows up until stop speaking
+  let p = document.createElement('p');
+  const words = document.querySelector('.words');
+  words.appendChild(p);
+    // Node.appendChild() adds a node to the end of the list of children of a specified parent node
+
+  // when the result comes back
+  recognition.addEventListener('result', e => {
+    const transcript = Array.from(e.results)
+        .map(result => result[0])
+        .map(result => result.transcript)
+        .join('')
+
+    p.textContent = transcript;
+    if(e.results[0].isFinal){
+      p = document.createElement('p');
+      words.appendChild(p);
+    }
+    
+    if(transcript.includes('get the weather')){
+      console.log('Getting the weather');
+    }
+    console.log(transcript)
+  })
+
+  recognition.addEventListener('end',recognition.start);
+
+  recognition.start();
 
 </script>
 
