--- a/Javascript30/Day20/index.htm
+++ b/Javascript30/Day20/index.htm
@@ -32,10 +32,10 @@
       p = document.createElement('p');
       words.appendChild(p);
     }
-    
-    if(transcript.includes('get the weather')){
-      console.log('Getting the weather');
-    }
+
+    // if(transcript.includes('get the weather')){
+    //   console.log('Getting the weather');
+    // }
     console.log(transcript)
   })
 
