--- a/Javascript30/Day20/index.htm
+++ b/Javascript30/Day20/index.htm
@@ -13,6 +13,7 @@
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
   const recognition = new SpeechRecognition();
+  console.log(recognition)
   recognition.interimResults = true; 
     // the result will populate while speaking, otherwise, the result only shows up until stop speaking
   let p = document.createElement('p');
