--- a/Javascript30/Day21/index.htm
+++ b/Javascript30/Day21/index.htm
@@ -59,6 +59,20 @@
     /*Compass: https://thenounproject.com/search/?q=compass&i=592352*/
   </style>
   <script>
+    const arrow = document.querySelector('.arrow');
+    const speed = document.querySelector('.speed-value');
+
+          // watchPosition or getCurrrentPosition
+    navigator.geolocation.watchPosition((data) => {
+      // data will have coords and timestamp(indication time)
+      // coords will have accuracy, altitude, altitudeAccuarcy, heading, latitude, longtitude, speed(km/hr)
+      speed.textContent = data.coords.speed;
+      arrow.style.transform = `rotate(${data.coords.heading}deg)`;
+    }, (err) => {
+      console.err(err);
+      alert('HEY! YOU GOTTA ALLOW THAT TO HAPPEN!!')
+    });
+    
   </script>
 </body>
 </html>
