--- a/Mywork.htm
+++ b/Mywork.htm
@@ -56,6 +56,8 @@
 		<span><a href="/Javascript30/Day16/">JsDay16 Mouse Shadow</a></span>
 		<span><a href="https://jojojack.tk/Javascript30/Day19/">JsDay19 Webcam FUNNNN!</a></span>
 		<span><a href="https://jojojack.tk/Javascript30/Day20/">JsDay20 Speech Recognition</a></span>
+		<span><a href="https://jojojack.tk/Javascript30/Day21/">JsDay21 GoePosition</a></span>
+
 
 	</div>
 	<hr/>
