--- a/Javascript30/Day22/index.htm
+++ b/Javascript30/Day22/index.htm
@@ -26,7 +26,29 @@
     </div>
 
   <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
+    const triggers = document.querySelectorAll('a');
+    const highlight = document.createElement('span');
+    highlight.classList.add('highlight');
+    document.body.append(highlight); // similiar to appendChild
+
+    function highlightLink(){
+      const linkCoords = this.getBoundingClientRect();
+        // getBoundingClientRect: give the size the where it is on the page
+      console.log(linkCoords)
+      const coords = {
+        width: linkCoords.width,
+        height: linkCoords.height,
+        top: linkCoords.top + window.scrollY,
+        left: linkCoords.left + window.scrollX,
+      }
+
+
+      highlight.style.width = `${coords.width}px`;
+      highlight.style.height = `${coords.height}px`;
+      highlight.style.transform = `translate(${coords.left}px,${coords.top}px)`
+    }
+
+    triggers.forEach(a => a.addEventListener('mouseover', highlightLink));
   </script>
 </body>
 </html>
