--- a/Mywork.htm
+++ b/Mywork.htm
@@ -57,6 +57,8 @@
 		<span><a href="https://jojojack.tk/Javascript30/Day19/">JsDay19 Webcam FUNNNN!</a></span>
 		<span><a href="https://jojojack.tk/Javascript30/Day20/">JsDay20 Speech Recognition</a></span>
 		<span><a href="https://jojojack.tk/Javascript30/Day21/">JsDay21 GoePosition</a></span>
+		<span><a href="/Javascript30/Day22/">JsDay22 Follow Along Links</a></span>
+		<span><a href="/Javascript30/Day23/">JsDay23 Speech Synthesis</a></span>
 
 
 	</div>
