--- a/Mywork.htm
+++ b/Mywork.htm
@@ -59,6 +59,7 @@
 		<span><a href="https://jojojack.tk/Javascript30/Day21/">JsDay21 GoePosition</a></span>
 		<span><a href="/Javascript30/Day22/">JsDay22 Follow Along Links</a></span>
 		<span><a href="/Javascript30/Day23/">JsDay23 Speech Synthesis</a></span>
+		<span><a href="/Javascript30/Day24/">JsDay23 Fixed Nav</a></span>
 
 
 	</div>
