--- a/Javascript30/Day26/index.htm
+++ b/Javascript30/Day26/index.htm
@@ -7,10 +7,10 @@
 <body>
   <h2>Cool</h2>
   <nav class="top">
-    <div class="dropdownBackground">
+    <div class="dropdownBackground">    <!-- the white part,only one, not three!! -->
       <span class="arrow"></span>
     </div>
-
+    
     <ul class="cool">
       <li>
         <a href="#">About Me</a>
@@ -220,6 +220,44 @@
 </style>
 
 <script>
+  const triggers = document.querySelectorAll('.cool > li');
+  const background = document.querySelector('.dropdownBackground');
+  const nav = document.querySelector('.top');
+
+  function handleEnter(){
+    this.classList.add('trigger-enter');
+    setTimeout(() => {
+      if(this.classList.contains('trigger-enter')){
+        this.classList.add('trigger-enter-active')
+      }
+    }, 150);
+    background.classList.add('open');
+
+    const dropdown = this.querySelector('.dropdown');
+    const dropdownCoords = dropdown.getBoundingClientRect();
+      // it gives info about relative to where on the page it is (absolute)
+    const navCoords = nav.getBoundingClientRect();
+
+    const coords = {
+      height: dropdownCoords.height,
+      width: dropdownCoords.width,
+      top: dropdownCoords.top - navCoords.top,
+      left: dropdownCoords.left - navCoords.left,
+    };
+
+    background.style.setProperty('width', coords.width+'px');
+    background.style.setProperty('height', coords.height+'px');
+    background.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
+  }
+
+  function handleLeave(){
+    this.classList.remove('trigger-enter', 'trigger-enter-active');
+    background.classList.remove('open');
+  }
+
+  triggers.forEach(trigger => trigger.addEventListener('mouseover', handleEnter));
+  triggers.forEach(trigger => trigger.addEventListener('mouseleave', handleLeave));
+
 </script>
 
 </body>
