changes many files, tired

--- a/Mywork.htm
+++ b/Mywork.htm
@@ -61,6 +61,10 @@
 		<span><a href="/Javascript30/Day23/">JsDay23 Speech Synthesis</a></span>
 		<span><a href="/Javascript30/Day24/">JsDay24 Fixed Nav</a></span>
 		<span><a href="/Javascript30/Day26/">JsDay26 Follow Along Nav</a></span>
+		<span><a href="/Javascript30/Day27/">JsDay27 Click & Drag</a></span>
+		<span><a href="/Javascript30/Day28/">JsDay28 Video Speed Controller UI</a></span>
+		<span><a href="/Javascript30/Day29/">JsDay29 Countdown CLock</a></span>
+		<span><a href="/Javascript30/Day30/">JsDay30 Mole Game</a></span>
 
 	</div>
 	<hr/>
