--- a/Javascript30/Day27/index-FINISHED.html
+++ b/Javascript30/Day27/index-FINISHED.html
@@ -44,6 +44,7 @@
     isDown = true;
     slider.classList.add('active');
     startX = e.pageX - slider.offsetLeft;
+    console.log(startX)
     scrollLeft = slider.scrollLeft;
   });
 
