--- a/Javascript30/Day27/index.htm
+++ b/Javascript30/Day27/index.htm
@@ -35,6 +35,41 @@
   </div>
 
 <script>
+  const slider = document.querySelector('.items');
+  let isDown = false;
+  let startX;
+  let scrollLeft;
+
+  slider.addEventListener('mousedown', (e) => {
+    isDown = true;
+    slider.classList.add('active');
+    startX = e.pageX - slider.offsetLeft ;
+      // e.pageX: where the mouse is relative to the whole page
+    scrollLeft = slider.scrollLeft;
+  });
+
+  slider.addEventListener('mouseleave', () => {
+    isDown = false;
+    slider.classList.remove('active');
+  });
+
+  slider.addEventListener('mouseup', () => {
+    isDown = false;
+    slider.classList.remove('active');
+  });
+
+  slider.addEventListener('mousemove', (e) => {
+    if(!isDown) return;  // stop the function is mouse is not down
+    e.preventDefault();
+       //prevent from selecting of text that's inside of there
+       //or any other weird stuff that the browser might you're selecting texts
+    const x = e.pageX - slider.offsetLeft;
+    const walk = (x - startX) * 2; // positive: goes right, negative: goes left
+    slider.scrollLeft = scrollLeft - walk;
+  });
+
+
+
 </script>
 
   </body>
