--- a/Javascript30/Day23/index.htm
+++ b/Javascript30/Day23/index.htm
@@ -22,7 +22,7 @@
       <label for="pitch">Pitch:</label>
 
       <input name="pitch" type="range" min="0" max="2" value='0.8' step="0.1">
-      <textarea name="text">Chi kur shou</textarea>
+      <textarea name="text">Chi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shouChi kur shou</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
 
@@ -45,7 +45,7 @@
   function populateVoices(){
     voices = this.getVoices();
     console.log(voices)
-    const index = voices.findIndex(voice => voice.name === 'Google UK English Female');
+    const index = voices.findIndex(voice => voice.name === 'Google हिन्दी');
     voices = [voices[index], ...voices.slice(0,index), ...voices.slice(index+1)];
 
     const voiceOptions = voices
