changes Mywork file

--- a/Mywork.htm
+++ b/Mywork.htm
@@ -1,74 +1,136 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title>MyWork</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<script type="text/javascript">
-		function gotcha(webname){
-			var req= new XMLHttpRequest();
-			req.open("get","https://jojojack.tk/"+webname);
-			req.onload=function(){
-				var content=document.getElementById('content');
-				content.innerHTML=this.responseText;
-			};
-			req.send();
-		}
-	</script>
-	<style type="text/css">
-		span{
-			cursor:pointer; text-decoration:underline; 
-			margin-right:10px
-		}
-		span:hover{
-			color:red;
-		}
-	</style>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>MyWork</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <script type="text/javascript">
+      function gotcha(webname) {
+        var req = new XMLHttpRequest();
+        req.open("get", "https://jojojack.tk/" + webname);
+        req.onload = function () {
+          var content = document.getElementById("content");
+          content.innerHTML = this.responseText;
+        };
+        req.send();
+      }
+    </script>
+    <style type="text/css">
+      span {
+        cursor: pointer;
+        text-decoration: underline;
+        margin-right: 10px;
+      }
+      span:hover {
+        color: red;
+      }
+    </style>
+  </head>
 
-<body onload="gotcha('Homepage.htm')")>
-	<div class="tab">
-	    <span onclick="gotcha('Homepage.htm')">Homepage</span>
-		<span onclick="gotcha('htmlDOM.htm')">htmlDOM</span>
-		<span onclick="gotcha('css_practice.htm')">css practice</span>
-		<span onclick="gotcha('css.htm')">css</span>
-		<span onclick="gotcha('CSS_Flexbox.htm')">CSS Flexbox</span>
-		<span onclick="gotcha('CSS表格樣式.htm')">CSS表格樣式</span>
-		<span onclick="gotcha('CSS選擇器.htm')">CSS選擇器</span>
-		<span><a href="https://jojojack.tk/Ajax標籤選單.htm">Ajax 標籤選單</a></span>
-		<span><a href="/FirstWork.htm">Firstwork</a></span>
-		<span><a href="http://jojojack.tk">Frontpage</a></span>
-		<span><a href="/canvasdraw.htm">Canvas繪圖</a></span>
-		<span><a href="/Movie.htm">影片喔喔</a></span>
-		<span><a href='/SVGPractice.htm'>我要回家啦!!!</a></span>
-		<span><a href='/formandvalidate.htm'>表單設計與驗證</a></span>
-		<span><a href='/Javascript30/Day1/'>JsDay1 Drum</a></span>
-		<span><a href='/Javascript30/Day2/'>JsDay2 Clock</a></span>
-		<span><a href='/Javascript30/Day3/'>JsDay3 Bro!</a></span>
-		<span><a href='/Javascript30/Day5/'>JsDay5 Gallery</a></span>
-		<span><a href="/Javascript30/Day6/">JsDay6 Search!</a></span>
-		<span><a href="/Javascript30/Day8/">JsDay8 Canvas</a></span>
-		<span><a href="/Javascript30/Day10/">JsDay10 Shift Selection</a></span>
-		<span><a href="/Javascript30/Day11/">JsDay11 HTML Video</a></span>
-		<span><a href="/Javascript30/Day12/">JsDay12 Surprise MF</a></span>
-		<span><a href="/Javascript30/Day13/">JsDay13 Slide in on scroll</a></span>
-		<span><a href="/Javascript30/Day15/">JsDay15 Local Storage</a></span>
-		<span><a href="/Javascript30/Day16/">JsDay16 Mouse Shadow</a></span>
-		<span><a href="https://jojojack.tk/Javascript30/Day19/">JsDay19 Webcam FUNNNN!</a></span>
-		<span><a href="https://jojojack.tk/Javascript30/Day20/">JsDay20 Speech Recognition</a></span>
-		<span><a href="https://jojojack.tk/Javascript30/Day21/">JsDay21 GoePosition</a></span>
-		<span><a href="/Javascript30/Day22/">JsDay22 Follow Along Links</a></span>
-		<span><a href="/Javascript30/Day23/">JsDay23 Speech Synthesis</a></span>
-		<span><a href="/Javascript30/Day24/">JsDay24 Fixed Nav</a></span>
-		<span><a href="/Javascript30/Day26/">JsDay26 Follow Along Nav</a></span>
-		<span><a href="/Javascript30/Day27/">JsDay27 Click & Drag</a></span>
-		<span><a href="/Javascript30/Day28/">JsDay28 Video Speed Controller UI</a></span>
-		<span><a href="/Javascript30/Day29/">JsDay29 Countdown CLock</a></span>
-		<span><a href="/Javascript30/Day30/">JsDay30 Mole Game</a></span>
-
-	</div>
-	<hr/>
-	<div id="content"></div>
-</body>
-
+  <body onload="gotcha('Homepage.htm')" )>
+    <div class="tab">
+      <span onclick="gotcha('Homepage.htm')">Homepage</span>
+      <span onclick="gotcha('htmlDOM.htm')">htmlDOM</span>
+      <span onclick="gotcha('css_practice.htm')">css practice</span>
+      <span onclick="gotcha('css.htm')">css</span>
+      <span onclick="gotcha('CSS_Flexbox.htm')">CSS Flexbox</span>
+      <span onclick="gotcha('CSS表格樣式.htm')">CSS表格樣式</span>
+      <span onclick="gotcha('CSS選擇器.htm')">CSS選擇器</span>
+      <span
+        ><a href="https://jojojack.tk/Ajax標籤選單.htm">Ajax 標籤選單</a></span
+      >
+      <span><a href="/FirstWork.htm">Firstwork</a></span>
+      <span><a href="http://jojojack.tk">Frontpage</a></span>
+      <span><a href="/canvasdraw.htm">Canvas繪圖</a></span>
+      <span><a href="/Movie.htm">影片喔喔</a></span>
+      <span><a href="/SVGPractice.htm">我要回家啦!!!</a></span>
+      <span><a href="/formandvalidate.htm">表單設計與驗證</a></span>
+      <span><a href="/Javascript30/Day1_DrumKit/">JsDay1 Drum</a></span>
+      <span><a href="/Javascript30/Day2_Clock/">JsDay2 Clock</a></span>
+      <span><a href="/Javascript30/Day3_CSSVariable/">JsDay3 Bro!</a></span>
+      <span><a href="/Javascript30/Day5_FlexGallery/">JsDay5 Gallery</a></span>
+      <span><a href="/Javascript30/Day6_Ajax/">JsDay6 Search!</a></span>
+      <span><a href="/Javascript30/Day8_HTML5Canvas/">JsDay8 Canvas</a></span>
+      <span
+        ><a href="/Javascript30/Day10_ShiftKeyCheck/"
+          >JsDay10 Shift Selection</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day11_VideoPlayer/">JsDay11 HTML Video</a></span
+      >
+      <span
+        ><a href="/Javascript30/Day12_SecretCode/">JsDay12 Surprise MF</a></span
+      >
+      <span
+        ><a href="/Javascript30/Day13_SlideInOnScroll/"
+          >JsDay13 Slide in on scroll</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day15_LocalStorage/"
+          >JsDay15 Local Storage</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day16_CSSTextShadow/"
+          >JsDay16 Mouse Shadow</a
+        ></span
+      >
+      <span
+        ><a href="https://jojojack.tk/Javascript30/Day19_WebcamFun/"
+          >JsDay19 Webcam FUNNNN!</a
+        ></span
+      >
+      <span
+        ><a href="https://jojojack.tk/Javascript30/Day20_SpeedRecognition/"
+          >JsDay20 Speech Recognition</a
+        ></span
+      >
+      <span
+        ><a href="https://jojojack.tk/Javascript30/Day21_Geolocation/"
+          >JsDay21 GoePosition</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day22_FollowAlongLinks/"
+          >JsDay22 Follow Along Links</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day23_SpeechSynthesis/"
+          >JsDay23 Speech Synthesis</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day24_StickyNav/">JsDay24 Fixed Nav</a></span
+      >
+      <span
+        ><a href="/Javascript30/Day26_FollowAlongDropdown/"
+          >JsDay26 Follow Along Nav</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day27_DragScroll/"
+          >JsDay27 Click & Drag</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day28_VideoSpeed/"
+          >JsDay28 Video Speed Controller UI</a
+        ></span
+      >
+      <span
+        ><a href="/Javascript30/Day29_Countdown/"
+          >JsDay29 Countdown CLock</a
+        ></span
+      >
+      <span><a href="/Javascript30/Day30_Game/">JsDay30 Mole Game</a></span>
+    </div>
+    <hr />
+    <div id="content"></div>
+  </body>
 </html>
